Your commit message

--- a/.env.sample
+++ b/.env.sample
@@ -24,12 +24,12 @@ AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
 # User Interface
-UI_TITLE=
-UI_LOGO=
-UI_CHAT_LOGO=
-UI_CHAT_TITLE=
+UI_TITLE= My copilotsz
+UI_LOGO=https://media.licdn.com/dms/image/C4D0BAQHut-uUTyy0VA/company-logo_200_200/0/1631306482096?e=2147483647&v=beta&t=7n3Dra31peG9mDFU9igTq2v0cfqNpwrUp2B-j_OlxiA
+UI_CHAT_LOGO=https://media.licdn.com/dms/image/C4D0BAQHut-uUTyy0VA/company-logo_200_200/0/1631306482096?e=2147483647&v=beta&t=7n3Dra31peG9mDFU9igTq2v0cfqNpwrUp2B-j_OlxiA
+UI_CHAT_TITLE= 
 UI_CHAT_DESCRIPTION=
-UI_FAVICON=
+UI_FAVICON= 
 # Chat history
 AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=db_conversation_history
